Remove flex on job display to fix no-scroll issue on safari

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -12,6 +12,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 * {
   font-family: Open Sans,sans-serif;
   outline: none;
+  box-sizing: border-box;
 }
 
 a {
@@ -268,8 +269,6 @@ body {
 }
 
 .select-multiple {
-  display:flex;
-  flex-direction: column;
   width: 100%;
   margin-top: 15px;
   margin-bottom: 15px;
@@ -320,6 +319,7 @@ body {
 }
 
 .job-input {
+  width: 90%;
   margin: 5px 10px 5px 10px;
   padding: 0;
   border: none;
